# haiku-onedrive

./: .PackageInfo  .gitignore  API_SPEC_AUTH_SERVICE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  CLAUDE.md  CMakeLists.txt  DEPENDENCIES.md  Doxyfile  FUNCTIONAL_REQUIREMENTS.md  LICENSE  PROGRESS.md  PROJECT_RULES.md  README.md  SESSION_LOG.md  push-to-github.sh
.claude/: project_state.json  settings.local.json
config/: onedrive.conf.example
documentation/: HaikuOneDrive_Architecture.md  README.md
locales/: de.catkeys  en.catkeys  es.catkeys  fr.catkeys  ja.catkeys
scripts/: update-docs.sh
src/api/: AuthManager.cpp  AuthManager.h  AuthenticationService.cpp  AuthenticationService.h  CMakeLists.txt  ConnectionPool.cpp  ConnectionPool.h  OneDriveAPI.cpp  OneDriveAPI.h
src/daemon/: AttributeManager.cpp  AttributeManager.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  OneDriveDaemon.cpp  OneDriveDaemon.h  SyncEngine.cpp  SyncEngine.h  main.cpp  onedrive_daemon.launch.in
src/filesystem/: CMakeLists.txt  DragDropHandler.cpp  DragDropHandler.h  ISyncStateHandler.h  SyncStateIcons.cpp  SyncStateIcons.h  VirtualFolder.cpp  VirtualFolder.h
src/preferences/: CMakeLists.txt  OneDrivePrefs.cpp  OneDrivePrefs.h  main.cpp
src/shared/: AttributeHelper.cpp  AttributeHelper.h  CMakeLists.txt  ColorConstants.h  ErrorLogger.cpp  ErrorLogger.h  FileSystemConstants.h  JSONSerializer.cpp  JSONSerializer.h  OneDriveConstants.h
src/tests/: AuthManagerTest.cpp  CMakeLists.txt  GUITestCases.md  IntegrationTest.cpp  OneDriveAPITest.cpp  OneDriveDaemonTest.cpp  SimpleAPITest.cpp  SimpleAuthTest.cpp  SimpleIntegrationTest.cpp  SimpleTestFramework.cpp  SimpleTestFramework.h  SimpleTestRunner.cpp  TestRunner.cpp  run_tests.sh  test_config.h.in
src/tracker/: CMakeLists.txt  OneDriveTrackerAddon.cpp  OneDriveTrackerAddon.h
tests/: CMakeLists.txt  TestCase.h  TestRunner.cpp
tests/api/: AuthenticationServiceTest.cpp
